fixed missing background

--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,8 @@ body {
   font-family: Helvetica, Arial, sans-serif;
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 a {
